--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -1,1 +1,17 @@
-<v-book book="{{books[0]}}"/>
+<view class="container">
+  <view class="header">
+    <view class="box">
+      <image src="/images/icon/search.png" />
+      <text>搜索书籍</text>
+    </view>
+  </view>
+  <view class="sub-container">
+    <image class="head-img" src="/images/book/quality.png" />
+    <view class="box-container">
+      <block wx:for="{{books}}" wx:key="id">
+        <v-book book="{{item}}"/>
+      </block>
+    </view>
+  </view>
+</view>
+
