new functional for tag

--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -55,3 +55,22 @@
   flex-wrap: wrap;
   padding: 0 30rpx;
 }
+
+.comment-container v-tag{
+  margin-right:15rpx;
+  margin-bottom:15rpx;
+}
+
+.num{
+  margin-left:10rpx;
+  font-size:22rpx;
+  color:#aaaaaa;
+}
+
+.ex-tag1{
+  background-color:#fffbbb !important;
+}
+
+.ex-tag2{
+  background-color:#eefbff !important;
+}
