--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -2,13 +2,13 @@
   <view class="header">
     <view class="search-container">
       <image class="icon" src="images/search.png" />
-      <input bind:confirm="onConfirm" placeholder-class='in-bar' placeholder='书籍名' class='bar' auto-focus="true" />
-      <image class="cancel-img" src="images/cancel.png" />
+      <input value="{{q}}" bind:confirm="onConfirm" placeholder-class='in-bar' placeholder='书籍名' class='bar' auto-focus="true" />
+      <image bind:tap="onDelete" class="cancel-img" src="images/cancel.png" />
     </view>
     <view class='cancel' bind:tap="onCancel">取消</view>
   </view>
     
-  <view>
+  <view wx:if="{{!searching}}">
     <view class="history">
       <view class="title">
         <view class="chunk"></view>
@@ -16,7 +16,7 @@
       </view>
       <view class="tags">
           <block wx:for="{{historyWords}}" wx:key="index">
-            <v-tag text="{{item}}" />
+            <v-tag bind:tapping="onConfirm" text="{{item}}" />
           </block>
         </view>
     </view>
@@ -27,9 +27,17 @@
       </view>
        <view class="tags">
         <block wx:for="{{hotWords}}" wx:key="index">
-          <v-tag text="{{item}}" />
+          <v-tag bind:tapping="onConfirm" text="{{item}}" />
         </block>
       </view>
     </view> 
   </view>
+  <view wx:if="{{searching}}" class="books-container">
+    <block wx:for="{{dataArray}}" wx:key="{{item.id}}">
+      <v-book book="{{item}}" />
+    </block>  
+  </view>
+
+  <v-loading class="loading-center" wx:if="{{loadingCenter}}" />
+  <!-- <v-loading wx:if="{{searching}}" /> -->
 </view>
