--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -15,5 +15,5 @@
   </view>
 </view>
 
-<v-search bind:cancel="onCancel" wx:if="{{searching}}" />
+<v-search more="{{more}}" bind:cancel="onCancel" wx:if="{{searching}}" />
 
