--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -34,10 +34,11 @@
   </view>
   <view wx:if="{{searching}}" class="books-container">
     <block wx:for="{{dataArray}}" wx:key="{{item.id}}">
-      <v-book book="{{item}}" />
+      <v-book book="{{item}}" show-like="{{false}}" />
     </block>  
   </view>
 
   <v-loading class="loading-center" wx:if="{{loadingCenter}}" />
-  <!-- <v-loading wx:if="{{searching}}" /> -->
+  <v-loading class="loading" wx:if="{{loading}}" />
+  <text wx:if="{{noneResult}}" class="empty-tip">没有搜索到书籍</text>
 </view>
